Closed
Bug 1218681
Opened 10 years ago
Closed 10 years ago
plugin standalone process support on MIPS processor.
Categories
(Core :: IPC, defect)
Tracking
()
RESOLVED
FIXED
mozilla45
| Tracking | Status | |
|---|---|---|
| firefox45 | --- | fixed |
People
(Reporter: hwjeastd07, Assigned: hwjeastd07)
Details
Attachments
(1 file, 1 obsolete file)
|
1.88 KB,
patch
|
hev
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.80 Safari/537.36
Steps to reproduce:
1:Build firefox Browser on mips processor. such as Loongson3A
2:open website url: such as www.163.com.
3:when flash crashed, firefox crashed
Actual results:
firefox browser crashed when flash crashed immediately
Expected results:
firefox should not crashed , even if flash crashed. because flash plugin run in plugin-container process
| Assignee | ||
Updated•10 years ago
|
OS: Unspecified → Linux
Hardware: Unspecified → Other
Updated•10 years ago
|
Attachment #8679273 -
Attachment is patch: true
Attachment #8679273 -
Attachment mime type: text/x-patch → text/plain
Comment 1•10 years ago
|
||
Comment on attachment 8679273 [details] [diff] [review]
0001-add-plugin-container-standalone-process-code.-The-Co.patch
Review of attachment 8679273 [details] [diff] [review]:
-----------------------------------------------------------------
::: ipc/chromium/src/base/process_util.h
@@ +37,5 @@
> #include "base/command_line.h"
> #include "base/process.h"
>
> +
> +#define ARCH_CPU_MIPSEL 1
You shouldn't define here.
See: ipc/chromium/src/build/build_config.h
@@ +74,5 @@
> PROCESS_ARCH_I386 = 0x1,
> PROCESS_ARCH_X86_64 = 0x2,
> PROCESS_ARCH_PPC = 0x4,
> + PROCESS_ARCH_ARM = 0x8,
> + PROCESS_ARCH_MIPS = 0x16
Why not 0x10?
| Assignee | ||
Comment 2•10 years ago
|
||
Thanks.
#define ARCH_CPU_MIPSEL 1 may should define here below.
ipc/chromium/src/build/build_config.h
#elif defined(__mips__)
#define ARCH_CPU_MIPS 1
#define ARCH_CPU_32_BITS 1
See: ipc/chromium/src/build/build_config.h
@@ +74,5 @@
> PROCESS_ARCH_I386 = 0x1,
> PROCESS_ARCH_X86_64 = 0x2,
> PROCESS_ARCH_PPC = 0x4,
> + PROCESS_ARCH_ARM = 0x8,
> + PROCESS_ARCH_MIPS = 0x10
may be it should 0x10; because a power of 2. but it doesn't matter.
Updated•10 years ago
|
Component: Untriaged → IPC
Product: Firefox → Core
Updated•10 years ago
|
Assignee: nobody → hwjeastd07
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 3•10 years ago
|
||
Modify the code to make it more logical
Attachment #8679273 -
Attachment is obsolete: true
Attachment #8680476 -
Flags: review?(r)
Attachment #8680476 -
Flags: review?(gingerbread_man)
Updated•10 years ago
|
Attachment #8680476 -
Flags: review?(r) → review+
Comment 5•10 years ago
|
||
Comment on attachment 8680476 [details] [diff] [review]
0001-add-plugin-container-standalone-process-code.-The-Co.patch
I'm only involved with triage. Clearing patch review request.
Attachment #8680476 -
Flags: review?(gingerbread_man)
Comment 6•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Comment 7•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
Comment 8•10 years ago
|
||
removing the b2g 2.5 flag since this commit has been reverted due to an incorrect merge, sorry for the confusion
status-b2g-v2.5:
fixed → ---
You need to log in
before you can comment on or make changes to this bug.
Description
•