Bug 1218681 - add plugin-container standalone process code. The Code associate with ARCH. r=hev

---
 dom/plugins/ipc/PluginProcessParent.cpp | 3 +++
 ipc/chromium/src/base/process_util.h    | 5 ++++-
 2 files changed, 7 insertions(+), 1 deletion(-)